added js and css files and removed inline css,js

--- a/index.html
+++ b/index.html
@@ -4,47 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping list example</title>
-    <style>
-      li {
-        margin-bottom: 10px;
-      }
-
-      li button {
-        font-size: 12px;
-        margin-left: 20px;
-        color: #666;
-      }
-    </style>
+    <link rel="stylesheet" href="./styles.css">
+    <script src="./script.js" defer></script>
   </head>
   <body>
-
     <h1>My shopping list</h1>
-
     <div>
       <label for="item">Enter a new item:</label>
       <input type="text" name="item" id="item">
       <button>Add item</button>
     </div>
-
-    <ul>
-
-    </ul>
-
-    <script>
-        const newItemButton = document.querySelector("div button");
-        newItemButton.addEventListener("click", ()=>{
-            const listItem = document.createElement("li");
-            listItem.textContent = newItemButton.previousElementSibling.value;
-            const listItemContainer = document.querySelector("ul");
-            listItemContainer.appendChild(listItem);
-            const deleteButton = document.createElement("button");
-            deleteButton.textContent = "Delete";
-            listItem.appendChild(deleteButton);
-        })
-        const deleteButtonContainer = document.querySelector("ul");
-        deleteButtonContainer.addEventListener("click", (e) =>{
-            e.target.parentElement.remove();
-        })
-    </script>
+    <ul></ul>
   </body>
 </html>
